Stars showing up on blank screen.

--- a/Sparkle Stars/twinkle.css
+++ b/Sparkle Stars/twinkle.css
@@ -60,7 +60,7 @@
   animation:move-twink-back 200s linear infinite;
 }
 
-.clouds{
+/*.clouds{
     background:transparent url(images/clouds.png) repeat top center;
     z-index:3;
 
@@ -69,4 +69,4 @@
   -o-animation:move-clouds-back 200s linear infinite;
   -webkit-animation:move-clouds-back 200s linear infinite;
   animation:move-clouds-back 200s linear infinite;
-}
+}*/
