Full twinkle, but issues with lighter background.

--- a/Sparkle Stars/twinkle.css
+++ b/Sparkle Stars/twinkle.css
@@ -50,7 +50,7 @@
 }
 
 .twinkling{
-  background:transparent url(images/twinkling.png) repeat top center;
+  background:transparent url(twinkling.png) repeat top center;
   z-index:1;
 
   -moz-animation:move-twink-back 200s linear infinite;
