--- a/Fade Constellation/constellation.css
+++ b/Fade Constellation/constellation.css
@@ -1,3 +1,6 @@
+body {
+  background-color: black; 
+}
 .const {
   width: 11em;
   height: 11em;
@@ -9,6 +12,11 @@
   -webkit-opacity: 0.25;
   -moz-opacity: 0.25;
   opacity: 0;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  -o-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .const:hover .lines {
